--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "firebase": "^7.21.1",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-theme-firebase": "^1.0.10",
     "gatsby-transformer-sharp": "^2.5.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "react-hook-form": "^6.8.6",
+    "react-icons": "^3.11.0",
+    "styled-components": "^5.2.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "prettier": "2.1.1"
