--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.21.1",
+    "firebase-admin": "^9.2.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-html-attributes": "^1.0.5",
