--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.21.1",
-    "firebase-admin": "^9.2.0",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
