--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.6.2",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.12.0",
